examples/test/testpolicy19897.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19897
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key1: value39
      key38: value36
      key47: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value13
          key14: value36
          key46: value49
      podSelector:
        matchLabels:
          key15: value7
          key27: value20
